# hanabi

hanabi-backend/: Cargo.toml  build.rs
hanabi-backend/src/: client.rs  main.rs
hanabi-backend/src/models/: card.rs  game_state.rs  messages.rs  mod.rs
hanabi-frontend/: client.go  go.mod  go.sum  main.go  wslistener.go
hanabi-frontend/screens/: game.go  not_started_game.go  screen.go  start.go  started_game.go  utils.go
hanabi-frontend/state/: state.go
hanabi-frontend/websocket/: client.go  wslistener.go
proto/: requests.proto  responses.proto
