[package]
name = "hanabi-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
prost = "0.13.4"
prost-build = "0.13.4"
rand = "0.8.5"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26.1"
uuid = { version = "1.12.0", features = ["v4"] }

[build-dependencies]
prost-build = "0.13.4"